--- a/web_ui/pages/settings.html
+++ b/web_ui/pages/settings.html
@@ -216,6 +216,13 @@
                                 <div class="description">Vector + keyword matching (comprehensive)</div>
                             </div>
                         </label>
+                        <label class="radio-option">
+                            <input type="radio" name="retrieval_method" value="advanced">
+                            <div>
+                                <strong>Advanced Retrieval</strong>
+                                <div class="description">Vector semantic search (comprehensive) + LLM</div>
+                            </div>
+                        </label>
                     </div>
                 </div>
 
@@ -236,6 +243,13 @@
                             <div>
                                 <strong>HuggingFace AI Generation</strong>
                                 <div class="description">Generate AI responses using local models (slower)</div>
+                            </div>
+                        </label>
+                        <label class="radio-option">
+                            <input type="radio" name="generation_method" value="ollama">
+                            <div>
+                                <strong>Ollama AI generation</strong>
+                                <div class="description">Generate AI responses using Ollama (slow)</div>
                             </div>
                         </label>
                     </div>
